--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,21 +24,5 @@ jobs:
       - run:
           name: Install Serverless CLI and dependencies
           command: |
-            sudo npm i -g serverless
-            npm install
-
-      # run tests
-      - run: 
-          name: Run tests with code coverage
-          command: npm test --coverage
-
-      # deploy app            
-      - run:
-          name: Deploy application 
-          command: sls deploy -v
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: dependencies-cache-{{ checksum "package.json" }}
+            sudo echo "tests"
         
